[package]
name = "untitled_game"
version = "0.1.0"
authors = ["Skyler Calaman <54462713+Blckbrry-Pi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.6.0-rc1"
mint = "0.5"
winit = "0.24.0"